--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ email: myemail@gmail.com
 
 authors:
   johndoe:
-    name: John Doe
+    name: Kio
     bio: A Man who travels the world eating noodles
     external-image: false
     picture: assets/images/profile.jpg
