--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/Kio.jpg
+picture: assets/images/Kio.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -57,13 +57,13 @@ authors:
     name: Kio
     bio: A Man who travels the world eating noodles
     external-image: false
-    picture: assets/images/Kio.jpg
+    picture: assets/images/Kio.png
     twitter: johndoe
   jamesfoster:
-    name: James Foster
+    name: Kio
     bio: A Man who develops software with coffee
     external-image: false
-    picture: assets/images/Kio.jpg
+    picture: assets/images/Kio.png
     twitter: jamesfoster
 
 # do you want a larger site? change the option below
