--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: 
+twitter: 
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
@@ -47,7 +47,7 @@ github: Kioding
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: 
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: myemail@gmail.com
